--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -33,7 +33,7 @@
   <div class="swiper-wrapper">
 	<div class="swiper-slide swiper-hidden" style="background: #f5efef;">
 		<div>
-		  <a href="" target="_blank"><img class="img-responsive" src="http://tkcourse.com/files/system/2017/06-05/0922488e03f2444635.jpg?7.3.8">
+			<a href="" target="_blank"><img class="img-responsive" src="{{ asset('statics/images/school.jpg') }}">
 		  </a>
 		</div>
 	</div>
