--- a/app/Resources/views/default/book-lesson.html.twig
+++ b/app/Resources/views/default/book-lesson.html.twig
@@ -7,6 +7,7 @@
 <style>
 body {
     background-attachment: fixed;
+	background-size: cover;
     background-image: url( {{ asset('statics/images/bg.jpg') }} );	
 }
 </style>
@@ -14,17 +15,20 @@ body {
 
 {% block body %}
 
-
 <div class="top-content">
+
+<div class="row">
+	&nbsp;
+</div>
         	
 <div class="inner-bg">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2 text">
-				<h1><strong>Lesson Name and Code here</h1>
+				<h1><strong>Lesson {{ lesson.code }}</h1>
 				<div class="description">
 					<p>
-						This is the lesson description and some details. 
+						{{ lesson.description }}	
 					</p>
 				</div>
 			</div>
